<resources>
    <string name="app_name">Cardiac Arrest Detector</string>
    <string name="title_activity_login">Sign In or Sign Up</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_arabic">العربية</string>
    <string name="action_english">English</string>
    <string name="action_sign_in_short">Sign in or Register</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="btn_sign_up">Sign Up</string>
    <string name="btn_sign_in">Sign In</string>
    <string name="btn_next">Next</string>


    <string name="chk_btn_dontshow">Don\'t Show again</string>


    <string name="prompt_phone">Phone Number</string>
    <string name="prompt_name">Patient Name</string>
    <string name="prompt_age">Age</string>
    <string name="action_sign_up">Sign up</string>
    <string name="action_connect_bluetooth">Connect to Bluetooth</string>

    <string name="error_invalid_phone">This phone is invalid</string>
    <string name="none_paired">15</string>
    <string name="none_found">16</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_beloved"> Fill Beloved Circle</string>
    <string name="guide">This is our guide page</string>
    <string name="bluetooth_guide_area">This is our BLutooth connection Guide</string>
    <string name="beloved_guide">Beloved circle is refere to the pepole you wish us to contact when there is something regarding your health</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title"> Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    # nav
    <string name="nav_logout">Logout</string>


    # bluetooth connection
    <string name="start">START</string>

    # Beloved
    <string name="add_beloved_btn">ADD NEW BELOVED</string>
    <string name="nav_beloved_circle_title">Beloved Circle Settings</string>
    <string name="beloved_circle_update_title">UPDATE Beloved Person</string>
    <string name="beloved_circle_new_title">ADD Beloved Person</string>
    <string name="beloved_circle_list_title">My Beloved Circle</string>
    <string name="beloved_phone_input">Beloved Person Phone</string>
    <string name="beloved_name_input">Beloved Person Name</string>

    # Medications
    <string name="nav_medications_title">Medications</string>
    <string name="medication_guide"> This is the Medication Guide Area</string>
    <string name="first_medication_date"> The First Medication Date</string>
    <string name="last_medication_date"> The Last Medication Date</string>
    <string name="medication_name"> Medication Name</string>
    <string name="add_medication_btn"> Add new Medication</string>
    <string name="medications_list_title">My Medications</string>
    <string name="update_medication_title">Update Medication</string>


</resources>
