<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_beloved_list"
            android:icon="@drawable/ic_beloved_24dp"
            android:title="@string/nav_beloved_circle_title" />
        <item
            android:id="@+id/nav_medications_list"
            android:icon="@mipmap/medication"
            android:title="@string/nav_medications_title" />

    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@mipmap/logout"
                android:title="@string/nav_logout" />
        </menu>
    </item>
    <item android:title="Language">
        <menu>
            <item
                android:id="@+id/nav_ar"
                android:icon="@mipmap/ar_en"
                android:title="عربي" />
            <item
                android:id="@+id/nav_en"
                android:icon="@mipmap/ar_en"
                android:title="English" />
        </menu>
    </item>

</menu>
