<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".BluetoothConnectionActivity"
    tools:showIn="@layout/app_bar_main">


    <ScrollView
        android:id="@+id/connection_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:fillViewport="false">

    <LinearLayout
        android:id="@+id/beloved_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/bluetooth_guide_area"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/bluetooth_guide_area"
            android:gravity="center"
            android:layout_weight="3"
            android:layout_marginVertical="50dp"
            android:maxLines="10"

            />

                <Button
            android:id="@+id/connect_btn"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_weight="1"
            android:text="@string/action_connect_bluetooth"
            android:textStyle="bold" />
        <Button
            android:id="@+id/start"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_weight="1"
            android:text="@string/start"
            android:textStyle="bold"
            android:visibility="gone"/>

        <com.jjoe64.graphview.GraphView
            android:id="@+id/graph"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:visibility="gone"/>




    </LinearLayout>
    </ScrollView>

    <!-- Connection progress -->
    <ProgressBar
        android:id="@+id/connection_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

</android.support.constraint.ConstraintLayout>