<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".Doses.AddDose">

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:fillViewport="false">

        <LinearLayout
            android:id="@+id/beloved_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/medication_guide_area"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/medication_guide"
                android:gravity="center"
                android:layout_weight="3"
                android:layout_marginVertical="@dimen/activity_horizontal_margin"
                android:maxLines="10"

                />


            <LinearLayout
                android:id="@+id/first"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="10"
                android:orientation="horizontal">
                <AutoCompleteTextView
                    android:id="@+id/dose_time"
                    android:layout_height="match_parent"
                    android:layout_width="0dp"
                    android:hint="@string/first_medication_date"
                    android:inputType="date"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textAlignment="center"
                    android:enabled="false"
                    android:text="Dose Time"
                    android:layout_weight="8"/>

                <Button
                    android:id="@+id/pick_time"
                    style="?android:textAppearanceSmall"
                    android:layout_height="match_parent"
                    android:layout_width="0dp"
                    android:layout_marginTop="0dp"
                    android:layout_weight="2"
                    android:text="SET"
                    android:textStyle="bold"/>

            </LinearLayout>



            <Button
                android:id="@+id/delete_btn"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_weight="1"
                android:visibility="gone"
                android:text="@string/btn_next"
                android:textStyle="bold" />
            <Button
                android:id="@+id/submit_btn"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_weight="1"
                android:text="@string/btn_next"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>