<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity">
    <TabHost
        android:id="@+id/tabHost"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">



            <TabWidget
                android:id="@android:id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/SignIn"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ScrollView
                        android:id="@+id/login_form"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:clipToPadding="false"
                        android:fillViewport="false">

                        <LinearLayout
                            android:id="@+id/phone_login_form"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <android.support.design.widget.TextInputLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">

                                <AutoCompleteTextView
                                    android:id="@+id/signin_phone"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:hint="@string/prompt_phone"
                                    android:inputType="phone"
                                    android:maxLines="1"
                                    android:singleLine="true" />

                            </android.support.design.widget.TextInputLayout>

                            <android.support.design.widget.TextInputLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">

                                <EditText
                                    android:id="@+id/signin_password"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:hint="@string/prompt_password"
                                    android:imeOptions="actionUnspecified"
                                    android:imeActionId="1000"
                                    android:inputType="textPassword"
                                    android:maxLines="1"
                                    android:singleLine="true" />

                            </android.support.design.widget.TextInputLayout>

                            <Button
                                android:id="@+id/signin_button"
                                style="?android:textAppearanceSmall"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="16dp"
                                android:layout_weight="1"
                                android:text="@string/action_sign_in"
                                android:textStyle="bold" />


                        </LinearLayout>
                    </ScrollView>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/SignUp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ScrollView
                        android:id="@+id/signup_form"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:clipToPadding="false"
                        android:fillViewport="false">

                        <LinearLayout
                            android:id="@+id/phone_signup_form"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <android.support.design.widget.TextInputLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">

                                <AutoCompleteTextView
                                    android:id="@+id/signup_name"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:hint="@string/prompt_name"
                                    android:inputType="textAutoComplete"
                                    android:maxLines="1"
                                    android:singleLine="true" />

                            </android.support.design.widget.TextInputLayout>
                            <android.support.design.widget.TextInputLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">

                                <AutoCompleteTextView
                                    android:id="@+id/signup_age"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:hint="@string/prompt_age"
                                    android:inputType="number"
                                    android:maxLines="1"
                                    android:singleLine="true" />

                            </android.support.design.widget.TextInputLayout>

                            <android.support.design.widget.TextInputLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">

                                <AutoCompleteTextView
                                    android:id="@+id/signup_phone"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:hint="@string/prompt_phone"
                                    android:inputType="phone"
                                    android:maxLines="1"
                                    android:singleLine="true" />

                            </android.support.design.widget.TextInputLayout>
                            <android.support.design.widget.TextInputLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">

                                <EditText
                                    android:id="@+id/signup_password"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:hint="@string/prompt_password"
                                    android:imeOptions="actionUnspecified"
                                    android:imeActionId="1000"
                                    android:inputType="textPassword"
                                    android:maxLines="1"
                                    android:singleLine="true" />

                            </android.support.design.widget.TextInputLayout>



                            <Button
                                android:id="@+id/signup_button"
                                style="?android:textAppearanceSmall"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="16dp"
                                android:layout_weight="1"
                                android:text="@string/action_sign_up"
                                android:textStyle="bold" />

                        </LinearLayout>
                    </ScrollView>
                </LinearLayout>

            </FrameLayout>
        </LinearLayout>


    </TabHost>

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />



</LinearLayout>