<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".Medications.AddMedication">

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:fillViewport="false"
        >

        <LinearLayout
            android:id="@+id/beloved_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/medication_guide_area"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/medication_guide"
                android:gravity="center"
                android:layout_weight="3"
                android:layout_marginVertical="@dimen/activity_horizontal_margin"
                android:maxLines="10"

                />


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/medication_name"
                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:id="@+id/first"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="10"
            android:orientation="horizontal">
                <AutoCompleteTextView
                    android:id="@+id/medication_start_date"
                    android:layout_height="match_parent"
                    android:layout_width="0dp"
                    android:hint="@string/first_medication_date"
                    android:inputType="date"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textAlignment="center"
                    android:enabled="false"
                    android:text="@string/first_medication_date"
                    android:layout_weight="8"/>

            <Button
                android:id="@+id/pick_start_date"
                style="?android:textAppearanceSmall"
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:layout_marginTop="0dp"
                android:layout_weight="2"
                android:text="SET"
                android:textStyle="bold"/>

        </LinearLayout>


        <LinearLayout
            android:id="@+id/last"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="10"
            android:orientation="horizontal">
                <AutoCompleteTextView
                    android:id="@+id/medication_end_date"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/last_medication_date"
                    android:inputType="text"
                    android:layout_weight="8"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textAlignment="center"
                    android:enabled="false"
                    android:text="@string/last_medication_date"/>

            <Button
                android:id="@+id/pick_last_date"
                style="?android:textAppearanceSmall"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:layout_weight="2"
                android:text="SET"
                android:textStyle="bold"/>

            </LinearLayout>

        <LinearLayout
            android:id="@+id/btns"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:orientation="horizontal">
            <Button
                android:id="@+id/delete_btn"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_weight="1"
                android:text="Delete"
                android:textStyle="bold" />
            <Button
                android:id="@+id/submit_btn"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_weight="1"
                android:text="Add"
                android:textStyle="bold" />
        </LinearLayout>
            <Button
                android:id="@+id/add_dose"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_weight="1"
                android:text="Add Dose"
                android:visibility="gone"
                android:textStyle="bold" />
            <ListView
                android:id="@+id/doses_list"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:gravity="center"
                >

            </ListView>

        </LinearLayout>
    </ScrollView>


</android.support.constraint.ConstraintLayout>